third_party/blink/web_tests/external/wpt/fetch/api/idlharness.any-expected.txt
This is a testharness.js-based test.
Found 67 tests; 62 PASS, 5 FAIL, 0 TIMEOUT, 0 NOTRUN.
FAIL idl_test setup promise_test: Unhandled rejection with value: object "WebIDLParseError: Syntax error at line 1471, since `interface CustomElementRegistry`:
 define(DOMString name, CustomElementConstructor constructor, optional ElementDefinitionOptions
                        ^ Trailing comma in arguments list"
FAIL Partial interface mixin WindowOrWorkerGlobalScope: original interface mixin defined assert_true: Original interface mixin should be defined expected true got false
PASS Headers interface: existence and properties of interface object
PASS Headers interface object length
PASS Headers interface object name
PASS Headers interface: existence and properties of interface prototype object
PASS Headers interface: existence and properties of interface prototype object's "constructor" property
PASS Headers interface: existence and properties of interface prototype object's @@unscopables property
PASS Headers interface: operation append(ByteString, ByteString)
PASS Headers interface: operation delete(ByteString)
PASS Headers interface: operation get(ByteString)
PASS Headers interface: operation has(ByteString)
PASS Headers interface: operation set(ByteString, ByteString)
PASS Headers interface: iterable<ByteString, ByteString>
PASS Request interface: existence and properties of interface object
PASS Request interface object length
PASS Request interface object name
PASS Request interface: existence and properties of interface prototype object
PASS Request interface: existence and properties of interface prototype object's "constructor" property
PASS Request interface: existence and properties of interface prototype object's @@unscopables property
PASS Request interface: attribute method
PASS Request interface: attribute url
PASS Request interface: attribute headers
PASS Request interface: attribute destination
PASS Request interface: attribute referrer
PASS Request interface: attribute referrerPolicy
PASS Request interface: attribute mode
PASS Request interface: attribute credentials
PASS Request interface: attribute cache
PASS Request interface: attribute redirect
PASS Request interface: attribute integrity
PASS Request interface: attribute keepalive
FAIL Request interface: attribute isReloadNavigation assert_true: The prototype object must have a property "isReloadNavigation" expected true got false
PASS Request interface: attribute isHistoryNavigation
PASS Request interface: attribute signal
PASS Request interface: operation clone()
FAIL Request interface: attribute body assert_true: The prototype object must have a property "body" expected true got false
PASS Request interface: attribute bodyUsed
PASS Request interface: operation arrayBuffer()
PASS Request interface: operation blob()
PASS Request interface: operation formData()
PASS Request interface: operation json()
PASS Request interface: operation text()
PASS Response interface: existence and properties of interface object
PASS Response interface object length
PASS Response interface object name
PASS Response interface: existence and properties of interface prototype object
PASS Response interface: existence and properties of interface prototype object's "constructor" property
PASS Response interface: existence and properties of interface prototype object's @@unscopables property
PASS Response interface: operation error()
PASS Response interface: operation redirect(USVString, unsigned short)
PASS Response interface: attribute type
PASS Response interface: attribute url
PASS Response interface: attribute redirected
PASS Response interface: attribute status
PASS Response interface: attribute ok
PASS Response interface: attribute statusText
PASS Response interface: attribute headers
FAIL Response interface: attribute trailer assert_true: The prototype object must have a property "trailer" expected true got false
PASS Response interface: operation clone()
PASS Response interface: attribute body
PASS Response interface: attribute bodyUsed
PASS Response interface: operation arrayBuffer()
PASS Response interface: operation blob()
PASS Response interface: operation formData()
PASS Response interface: operation json()
PASS Response interface: operation text()
Harness: the test ran to completion.

